--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "face-api.js": "^0.22.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
